fix: wrap header and increase height on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -165,3 +165,32 @@ pre,
     padding: 16px;
     box-shadow: var(--color-black) 0px 1px 8px -2px;
 }
+
+@media only screen and (max-width: 576px) {
+    :root {
+        --header-height: 96px;
+    }
+
+    .header {
+        flex-wrap: wrap;
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: center;
+        }
+
+        div {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-between;
+        }
+    }
+}
